--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
